--- a/letter.html
+++ b/letter.html
@@ -209,7 +209,7 @@
             Will Andreev
         </div>
 
-        <a href="Panda.html" class="back-link">← Close Letter</a>
+        <a href="index.html" class="back-link">← Close Letter</a>
     </div>
 
 </body>
