--- a/retry.html
+++ b/retry.html
@@ -66,7 +66,7 @@
         <h1>Are you sure? 🥺</h1>
         <p>Please try againnnnnn huhu :< </p>
         
-        <a href="Panda.html" class="btn-retry">Try Again</a>
+        <a href="index.html" class="btn-retry">Try Again</a>
     </div>
 
 </body>
